ahv defconfig: update with devtoolset-9
No functional changes, just updating defconfig for what it actually
looks like coming out of the other side of the compiler.

To do that, first activate devtoolset-9, then do make menuconfig,
which makes cause-and-effect of menuconfig changes both either
to understand and accurate to what build env will actually see.

source /opt/rh/devtoolset-9/enable
cp ./arch/x86/configs/ahv_defconfig .config
make menuconfig
cp .config ./arch/x86/configs/ahv_defconfig

Change-Id: Ib1e7aaff954dff941ceb26e03d3999560f8da586

--- a/arch/x86/configs/ahv_defconfig
+++ b/arch/x86/configs/ahv_defconfig
@@ -2,14 +2,15 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/x86 5.10.102 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 4.9.2 20150212 (Red Hat 4.9.2-6)"
+CONFIG_CC_VERSION_TEXT="gcc (GCC) 9.3.1 20200408 (Red Hat 9.3.1-2)"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=40902
-CONFIG_LD_VERSION=224000000
+CONFIG_GCC_VERSION=90301
+CONFIG_LD_VERSION=232000000
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
+CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
@@ -201,6 +202,7 @@ CONFIG_RD_ZSTD=y
 # CONFIG_BOOT_CONFIG is not set
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_LD_ORPHAN_WARN=y
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
@@ -696,8 +698,10 @@ CONFIG_KVM_INTEL=m
 CONFIG_KVM_AMD=m
 CONFIG_KVM_AMD_SEV=y
 # CONFIG_KVM_MMU_AUDIT is not set
+CONFIG_AS_AVX512=y
 CONFIG_AS_SHA1_NI=y
 CONFIG_AS_SHA256_NI=y
+CONFIG_AS_TPAUSE=y
 
 #
 # General architecture-dependent options
@@ -4881,6 +4885,7 @@ CONFIG_DEBUG_BUGVERBOSE=y
 #
 CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
+# CONFIG_DEBUG_INFO_COMPRESSED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
 # CONFIG_DEBUG_INFO_BTF is not set
@@ -4947,6 +4952,8 @@ CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_HAVE_ARCH_KASAN_VMALLOC=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
+CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
+# CONFIG_KASAN is not set
 # end of Memory Debugging
 
 CONFIG_DEBUG_SHIRQ=y
@@ -5134,6 +5141,8 @@ CONFIG_UNWINDER_ORC=y
 CONFIG_FUNCTION_ERROR_INJECTION=y
 # CONFIG_FAULT_INJECTION is not set
 CONFIG_ARCH_HAS_KCOV=y
+CONFIG_CC_HAS_SANCOV_TRACE_PC=y
+# CONFIG_KCOV is not set
 CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_LKDTM is not set
 # CONFIG_TEST_LIST_SORT is not set
