tools/kvm/kvm_stat: clamp timestamps in man page to SOURCE_DATE_EPOCH
kvm_stat.1 is generated using a2x which is a wrapper around asciidoc and
xsltproc.

By default, it is generated a US-format date in two places in the first
few lines of the file.

Sadly a2x doesn't respect SOURCE_DATE_EPOCH so we need to explicitly
override the date attribute on the command-line in order to build
kvm_stat.1 reproducibly.

(Although using ISO-8601 date would be preferable to US-format, the
hyphens get escaped which looks odd, so maintain the original format.)

Change-Id: I647a519e25285fe47ff0cb7b42279720e7b3e030

--- a/tools/kvm/kvm_stat/Makefile
+++ b/tools/kvm/kvm_stat/Makefile
@@ -18,11 +18,12 @@ ifneq ($(findstring $(MAKEFLAGS),s),s)
   endif
 endif
 
+%.1: DATE=$(shell date -d @$(SOURCE_DATE_EPOCH) '+%m/%d/%Y')
 %.1: %.txt
 ifeq ($(a2x_path),)
 	$(error "You need to install asciidoc for man pages")
 else
-	$(QUIET_A2X)$(A2X) --doctype manpage --format manpage $<
+	$(QUIET_A2X)$(A2X) --doctype manpage --format manpage --attribute date=$(DATE) $<
 endif
 
 clean:
